--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "private": true
 }
