--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
-    "expo-font": "^9.1.0",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -19,14 +20,14 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "react-navigation-header-buttons": "^7.0.1",
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^3.0.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "redux-devtools-extension": "^2.13.9"
   },
   "private": true
