--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "^9.1.0",
     "expo-status-bar": "~1.0.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
