--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-permissions": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
