--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "expo-permissions": "~12.0.1"
+    "expo-permissions": "~12.0.1",
+    "expo-notifications": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
